--- a/py/templates/test_snakefoot.html
+++ b/py/templates/test_snakefoot.html
@@ -52,9 +52,9 @@
 <body style="padding:0; margin: 0; background: ;">
 
 
-    <script type="text/javascript" src="static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/snakefoot.js"></script>
-    <script type="text/javascript" src="static/js/lssc_client.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/snakefoot.js"></script>
+    <script type="text/javascript" src="js/lssc_client.js"></script>
 
     <script type="text/javascript">
 
