--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -90,10 +90,10 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/main_canvas.js"></script>
-    <script type="text/javascript" src="/js/snakefoot.js"></script>
-    <script type="text/javascript" src="/js/lssc_client.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/main_canvas.js"></script>
+    <script type="text/javascript" src="/static/js/snakefoot.js"></script>
+    <script type="text/javascript" src="/static/js/lssc_client.js"></script>
 
     <script type="text/javascript">
 
