--- a/py/templates/index.html
+++ b/py/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>To Update</title>
+    <title>lssc ml demo</title>
     <style type="text/css">
             
         .main_ui {
@@ -49,7 +49,30 @@
 
     </style>
 </head>
-<body style="width:1280px; padding:0; margin: 0; background: ;">
+<body style="width:1200px; padding:0; margin: 0; background: ;">
+    <div style="margin-left:10px; display:block; width:1000px;"> Usage of this demo(使用说明):
+        <p>
+            Left part is for entering training sample. For example, you have three shape sample, like X, Y, Z.(左边用来输入形状样本，比如X，Y，Z)<br>
+            First you enter 0 in input-box as X's label, and you draw a X in the canvas, and click send.(在输入框输入0，然后画一个X，点击send，你就多了一个label为0的样本， Y 和 Z 同理)<br>
+            Then you enter 1 in input-box as Y's label, and you draw a Y in the canvas, and click send.<br> 
+            As the same for Z. After you draw X, Y, Z, you can click train button. 
+        </p>
+        <p>
+            Right part is for testing. You can draw X, Y, or Z, and see if it give the correct label.(右边可以输入X，Y，或Z，然后系统会识别相应的label)
+        </p>
+        <p>
+            You can draw multiple samples for one label, and you need to click send for each sample,<br> but you don't have to enter label each time in input-box.(画多个样本可以只输入一次label，但是每次都需要发送样本)
+        </p>
+        <p>
+            Click clear, if you want to clear out the canvas.(清理画布，请点击click)
+        </p>
+        <p>
+            Refresh the page will destroy everything, and you can start over again.(刷新页面会让一切从零开始)
+        </p>
+        <p>
+            You can use other shape to replace X, Y, Z, like A, B, C.
+        </p>
+    </div>
     
     <div class="main_ui" style="">
 
